[gd_scene load_steps=2 format=3 uid="uid://digkx274wdmgq"]

[ext_resource type="Script" uid="uid://dbmtv66wnkviv" path="res://scripts/main_menu.gd" id="1_ec4kq"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ec4kq")

[node name="Menu" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1000.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 25
alignment = 1

[node name="PlayButton" type="Button" parent="Menu/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Jugar
"

[node name="OptionsButton" type="Button" parent="Menu/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Opciones"

[node name="CreditsButton" type="Button" parent="Menu/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Cr√©ditos"

[node name="ExitButton" type="Button" parent="Menu/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Salir"

[connection signal="pressed" from="Menu/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
